--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,74 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>calculator</title>
   </head>
-  <body></body>
+  <body>
+    <div class="formstyle">
+      <form name="form1">
+        <input id="calc" type="text" name="answer" /> <br />
+
+        <input
+          type="button"
+          value="Clear All"
+          onclick="form1.answer.value = ' ' "
+          id="clear"
+        />
+        <input
+          type="button"
+          value="&times"
+          class="orange-color"
+          onclick="form1.answer.value += '/' "
+        />
+        <br />
+        <input type="button" value="7" onclick="form1.answer.value += '7' " />
+        <input type="button" value="8" onclick="form1.answer.value += '8' " />
+        <input type="button" value="9" onclick="form1.answer.value += '9' " />
+        <input
+          type="button"
+          value="&divide"
+          class="orange-color"
+          onclick="form1.answer.value += '*' "
+        />
+
+        <br />
+        <input type="button" value="4" onclick="form1.answer.value += '4' " />
+        <input type="button" value="5" onclick="form1.answer.value += '5' " />
+        <input type="button" value="6" onclick="form1.answer.value += '6' " />
+        <input
+          type="button"
+          value="-"
+          class="orange-color"
+          onclick="form1.answer.value += '-' "
+        />
+
+        <br />
+        <input type="button" value="1" onclick="form1.answer.value += '1' " />
+        <input type="button" value="2" onclick="form1.answer.value += '2' " />
+        <input type="button" value="3" onclick="form1.answer.value += '3' " />
+        <input
+          type="button"
+          value="+"
+          class="orange-color"
+          onclick="form1.answer.value += '+' "
+        />
+
+        <br />
+
+        <input
+          type="button"
+          value="0"
+          id="value-0"
+          onclick="form1.answer.value += '0' "
+        />
+        <input
+          type="button"
+          value="="
+          class="orange-color"
+          onclick="form1.answer.value = eval(form1.answer.value) "
+        />
+      </form>
+    </div>
+  </body>
 </html>
