--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="formstyle">
+      <h1>Caluculator</h1>
       <form name="form1">
         <input id="calc" type="text" name="answer" /> <br />
         <input type="button" value="AC" id="clear" />
